tests/NormalTests/paczka1/fuzzy1/74092682.err
Error in line 1: S472 A264 35,6
Error in line 2: cdwZO A264 88,6
Error in line 8: cdwZO S348 6,8
Error in line 16: rA3a A442 68,67
Error in line 39: cdwZO S348 162,5
